# example-bazel-image

./: .gitpod.yml  BUILD.bazel  Dockerfile  README.md  WORKSPACE
